Make sure images are not inverted in dark mode
FossilOrigin-Name: 17bbad02c6f2ccae6bc4b92f3d67b95533947c06d34a4490a2bad8f82d0ee991

--- a/src/www/admin/static/styles/01-layout.css
+++ b/src/www/admin/static/styles/01-layout.css
@@ -28,6 +28,10 @@ html.dark main {
     filter: invert(100%) hue-rotate(180deg);
 }
 
+html.dark main img, html.dark main video {
+    filter: invert(100%) hue-rotate(180deg);
+}
+
 /* End of dark theme specifics */
 
 html {
